# typoscan

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README  TODO  configure.ac  dumpscanner.l  process-dump  scheduler  typolist.l  typoscan.c  typoscan.h
lib/: .gitignore  Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4
tests/: .gitignore  Abraham Lincoln.xml  Academy Award for Best Production Design.xml  Academy Award.xml  Alabama.xml  Alchemy.xml  Algeria.xml  Altruism.xml  Anarchism.xml  Anthropology.xml  Autism.xml  Ayn Rand.xml  Makefile.am  testsuite.at  typos-patterns.wiki
